<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.santander.ars</groupId>
		<artifactId>gln-back-arsenal-backend-lib-parent</artifactId>
		<version>3.12.3</version>
	</parent>
	<groupId>com.santander.bp</groupId>
	<artifactId>ars-pricing-tax-v1</artifactId>
	<version>0.1.11</version>
	<packaging>jar</packaging>
	<name>AppArsenal Microservice Arsenal Back-End</name>
	<description>Arsenal Back-End Microservice - Generated to AppArsenal</description> <!--
	Nao Remover -->
	<organization>
		<name>Santander Tecnologia</name>
		<url>https://www.santander.com.br</url>
	</organization>
	<licenses>
		<license>
			<name>Santander Tecnologia, Version 1.0</name>
			<url>https://www.santander.com.br/licenses/LICENSE-1.0.txt</url>
			<distribution>repo</distribution>
			<comments>####415253454E414C####</comments>
		</license>
	</licenses>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<archetype.key>####415253454E414C####</archetype.key>
	</properties>
	<dependencies>  <!-- Arsenal Libraries -->
		<dependency>
			<groupId>com.santander.ars</groupId>
			<artifactId>gln-back-arsenal-backend-api-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>com.santander.ars</groupId>
			<artifactId>gln-back-arsenal-backend-error-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>com.santander.ars</groupId>
			<artifactId>gln-back-arsenal-backend-telemetry-log-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>com.santander.ars</groupId>
			<artifactId>gln-back-arsenal-backend-test-starter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
		</dependency>  
		<!--Altair - Transação-->
		<dependency>
			<groupId>br.com.santander.ars</groupId>
			<artifactId>arsenal-lib-altair</artifactId>
			<version>2.0.0</version>
		</dependency>  <!--Comos DB-->
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-spring-data-cosmos</artifactId>
			<version>5.12.0</version>
		</dependency>

		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-core</artifactId>
			<version>1.41.0</version>
		</dependency>

		<!--Banco de dados PostgreSQL-->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		</dependency>


		<dependency>
			<groupId>io.github.resilience4j</groupId>
			<artifactId>resilience4j-spring-boot2</artifactId>
			<version>2.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>1.8.0</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<skipValidateSpec>true</skipValidateSpec>
							<inputSpec>
								${project.basedir}/src/main/resources/openapi.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<apiPackage>com.santander.bp.api</apiPackage>
							<modelPackage>com.santander.bp.model</modelPackage>
							<supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
							<templateDirectory>
								${project.basedir}/src/main/resources</templateDirectory>
							<configOptions>
								<useSpringBoot3>true</useSpringBoot3>
								<delegatePattern>true</delegatePattern>
								<openApiNullable>false</openApiNullable>
								<dateLibrary>java8</dateLibrary>
								<generateBuilders>true</generateBuilders>
								<booleanGetterPrefix>is</booleanGetterPrefix>
								<hideGenerationTimestamp>true</hideGenerationTimestamp>
								<useBeanValidation>false</useBeanValidation>
								<useTags>true</useTags>
								<useSwaggerAnnotations>false</useSwaggerAnnotations>
								<async>true</async>
								<returnResponse>true</returnResponse>
								<additionalModelTypeAnnotations>@SuppressWarnings({"hiding",
									"static-method", "unused"})</additionalModelTypeAnnotations>
								<additionalModelTypeAnnotations>@lombok.Builder
									@lombok.NoArgsConstructor
									@lombok.AllArgsConstructor</additionalModelTypeAnnotations>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
							<goal>build-info</goal>
						</goals>
						<configuration>
							<executable>true</executable>
							<additionalProperties>
								<project.description>${project.description}</project.description>
							</additionalProperties>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<includeOnlyProperties>
						<includeOnlyProperty>git.commit.id</includeOnlyProperty>
						<includeOnlyProperty>git.branch</includeOnlyProperty>
						<includeOnlyProperty>git.commit.time</includeOnlyProperty>
					</includeOnlyProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<delimiters>
						<delimiter>@</delimiter>
					</delimiters>
					<useDefaultDelimiters>false</useDefaultDelimiters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.santander.ars</groupId>
				<artifactId>gln-back-arsenal-backend-archunit-plugin</artifactId>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>arch-test</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.santander.ars</groupId>
						<artifactId>gln-back-arsenal-backend-archunit-core</artifactId>
						<version>${revision}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${org.mapstruct.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
						<compilerArg>-parameters</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
</project> 